[gd_scene load_steps=2 format=3 uid="uid://charselect001"]

[ext_resource type="Script" path="res://TitleScreen/character_select.gd" id="1_char"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_char")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
text = "SELECT CHARACTER"
horizontal_alignment = 1

[node name="CharacterContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_top = 80.0
offset_right = 170.0
offset_bottom = 180.0
theme_override_constants/separation = 20

[node name="CharacterInfo" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 200.0
offset_right = 120.0
offset_bottom = 300.0

[node name="CharacterName" type="Label" parent="CharacterInfo"]
layout_mode = 2
text = "Mage"
horizontal_alignment = 1

[node name="CharacterDesc" type="Label" parent="CharacterInfo"]
layout_mode = 2
text = "Master of ice magic"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CharacterStats" type="Label" parent="CharacterInfo"]
layout_mode = 2
text = "+20% Spell Size"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = -50.0
text = "START"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 45.0
text = "Back"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
